<resources>
    <string name="app_name">Assignment2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feedback">Feedback</string>
    <string name="registration_form">Registration</string>
    <string name="explore">Explore</string>
    <string name="welcome">Welcome</string>
    <string name="john_smith">John Smith</string>
    <string name="please_enter_your_name">Please enter your name:</string>
    <string name="_18">18</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="what_is_your_gender">What is your gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="step_1">Step 1</string>
    <string name="next">Next</string>
    <string name="go_back">Go back</string>
    <string name="name_of_college">Enter the name of your college</string>
    <string name="seneca_college">Seneca College</string>
    <string name="enter_the_name_of_your_team">Enter the name of your team</string>
    <string name="cyber_crusaders">Cyber Crusaders</string>
    <string name="enter_the_name_of_your_team_members">Enter the name of your team members. If you don\'t have a team, type N/A and we\'ll help you find a group</string>
    <string name="team_mate_names">Jane Doe, Bill Smith</string>
    <string name="what_do_you_hope_to_learn_from_this_hackathon">What do you hope to learn from this hackathon?</string>
    <string name="cybersecurity_project_mangement_etc">Cybersecurity, Project Mangement, etc</string>
    <string name="step_3">Step 3</string>
    <string name="do_you_agree_to_the_terms_and_conditions">Do you agree to the terms and conditions?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_agree_to_having_your_photo_taken_and_used_for_social_media">Do you agree to having your photo taken and used for social media?</string>
    <string name="to_seneca_hackathon_if_you_haven_t_registered_please_do_so_by_clicking_on_the_form_button_below">To Seneca Hackathon. If you haven\'t registered please do so. By clicking on the form button below.</string>
    <string name="if_you_have_registered">If you have registered, please go to the explore page by clicking on the person icon below. To see what\'s currently going on with the event</string>
    <string name="please_make_sure_the_entered_information_is_correct">Please make sure the entered information is correct</string>
    <string name="name_of_your_college">Name of your college</string>
    <string name="name_of_your_team_members">Name of your team members</string>
    <string name="name_of_your_team">Name of your team</string>
    <string name="what_you_hope_to_learn">What you hope to learn</string>
    <string name="your_name">Your name</string>
    <string name="your_age">Your age</string>
    <string name="your_gender">Your gender</string>
    <string name="submit">Submit</string>
    <string name="rate_seneca_hackathon_1_5">Rate Seneca Hackathon (1/5):</string>
    <string name="explain_reason_for_rating">Would you like to explain your reason for your rating? (Optional)</string>
    <string name="would_you_like_to_recieve_a_copy_of_your_response">Would you like to recieve a copy of your response?</string>
    <string name="did_you_enjoy_working_on_the_challenge_would_you_change_anything_about_it">Did you enjoy working on the challenge? Would you change anything about it?</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="here_s_what_s_on_the_schedule_for_the_hackathon">Here\'s what\'s on the schedule for the hackathon.</string>
    <string name="day_1_nzoom_meeting_discussing_the_topic">Day 1:\nZoom meeting discussing the topic</string>
    <string name="day_2_nhackathon_begins_the_event_will_be_held_at_seneca_s_newnham_which_is_located_at_750_finch_ave_e_toronto_on_m2j_2x5">Day 2: \nHackathon begins. The event will be held at Seneca\'s Newnham which is located at 750 Finch Ave E, Toronto ON M2J 2X5</string>
    <string name="outside_of_the_one_of_the_newnham_building_as_a_reference_for_participants">Outside of one of the Newnham buildings as a reference for participants</string>
</resources>