<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp">
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_college"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/schoolName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/seneca_college"
        android:textSize="15sp"
        android:padding="15dp"
        android:inputType="textCapSentences"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/enter_the_name_of_your_team"/>

    <EditText
        android:id="@+id/teamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="15dp"
        android:hint="@string/cyber_crusaders"
        android:inputType="textCapSentences"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_name_of_your_team_members"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/teamMemberNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="15sp"
        android:hint="@string/team_mate_names"
        android:inputType="textCapSentences"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_do_you_hope_to_learn_from_this_hackathon"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/hopeToLearn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="15sp"
        android:hint="@string/cybersecurity_project_mangement_etc"
        android:inputType="textCapSentences"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/goBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginTop="0dp"
            android:text="@string/go_back" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_gravity="end|bottom"
            android:text="@string/next" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"/>

</LinearLayout>