<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackFragment"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp">
    </FrameLayout>

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textAlignment="center"
        android:textSize="30sp"
        android:padding="35dp"/>

    <TextView
        android:id="@+id/ratingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_seneca_hackathon_1_5"
        android:textSize="18sp"/>
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ratingSeekbar"
        android:max="4"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain_reason_for_rating"
        android:textSize="18sp"
        android:paddingTop="15dp"/>
    <EditText
        android:id="@+id/ratingExplanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:padding="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/did_you_enjoy_working_on_the_challenge_would_you_change_anything_about_it"
        android:textSize="18sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:id="@+id/userFeedback"
        android:padding="18dp"/>

    <Switch
        android:id="@+id/emailCopySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/would_you_like_to_recieve_a_copy_of_your_response"
        android:textSize="18sp"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_enter_your_email"
        android:id="@+id/emailPrompt"
        android:visibility="invisible"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="180dp"
        android:layout_gravity="end|right"/>

</LinearLayout>